Moved productmaker stuff in a dedicated source file, fixed and improved more async features.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,4 +24,5 @@ nyello_SOURCES = nyello.cc\
 		sequence.cc\
 		command.cc\
 		delayed.cc\
-		asynchronizer.cc
+		asynchronizer.cc\
+		productmaker.cc
