--- a/src/cmd_parser/Makefile.am
+++ b/src/cmd_parser/Makefile.am
@@ -1,2 +1,8 @@
-lib_LTLIBRARIES = cmd_parser-0.1
-cmd_parser_SOURCES = cmd_parser.h cmd_parser.cc
+noinst_LIBRARIES = libcmd_parser.a
+libcmd_parser_a_SOURCES = cmd_parser.h cmd_parser.cpp\
+			  command.h command.cpp\
+			  exceptions.h exceptions.cpp\
+			  interpreter.h interpreter.cpp\
+			  signature.h signature.cpp
+
+#INCLUDES = -I@top_srcdir@/
