cmd_parser now starting to work, ugly hacks still in place.

--- a/src/cmd_parser/Makefile.am
+++ b/src/cmd_parser/Makefile.am
@@ -1,5 +1,6 @@
 noinst_LIBRARIES = libcmd_parser.a
-libcmd_parser_a_SOURCES = cmd_parser.h cmd_parser.cpp\
+libcmd_parser_a_SOURCES = cmd_parser.h\
+			  argument.h argument.cpp\
 			  command.h command.cpp\
 			  exceptions.h exceptions.cpp\
 			  interpreter.h interpreter.cpp\
