Draft of the new architecture for signature arguments, type safe and all!

--- a/src/cmd_parser/Makefile.am
+++ b/src/cmd_parser/Makefile.am
@@ -4,6 +4,7 @@ libcmd_parser_a_SOURCES = cmd_parser.h\
 			  command.h command.cpp\
 			  exceptions.h exceptions.cpp\
 			  interpreter.h interpreter.cpp\
-			  signature.h signature.cpp
+			  signature.h signature.cpp\
+			  sig_args.h
 
 #INCLUDES = -I@top_srcdir@/
