--- a/src/cmd_parser/Makefile.in
+++ b/src/cmd_parser/Makefile.in
@@ -184,7 +184,8 @@ libcmd_parser_a_SOURCES = cmd_parser.h\
 			  command.h command.cpp\
 			  exceptions.h exceptions.cpp\
 			  interpreter.h interpreter.cpp\
-			  signature.h signature.cpp
+			  signature.h signature.cpp\
+			  sig_args.h
 
 all: all-am
 
