First draft of a visitor framework for cmd_parser.

--- a/src/cmd_parser/Makefile.am
+++ b/src/cmd_parser/Makefile.am
@@ -5,6 +5,9 @@ libcmd_parser_a_SOURCES = cmd_parser.h\
 			  exceptions.h exceptions.cpp\
 			  interpreter.h interpreter.cpp\
 			  signature.h signature.cpp\
-			  sig_args.h
+			  sig_args.h\
+			  visitor.h\
+			  command_completion_visitor.h command_completion_visitor.cpp\
+			  argument_completion_visitor.h argument_completion_visitor.cpp
 
 #INCLUDES = -I@top_srcdir@/
