--- a/src/cmd_parser/Makefile.in
+++ b/src/cmd_parser/Makefile.in
@@ -50,7 +50,9 @@ ARFLAGS = cru
 libcmd_parser_a_AR = $(AR) $(ARFLAGS)
 libcmd_parser_a_LIBADD =
 am_libcmd_parser_a_OBJECTS = argument.$(OBJEXT) command.$(OBJEXT) \
-	exceptions.$(OBJEXT) interpreter.$(OBJEXT) signature.$(OBJEXT)
+	exceptions.$(OBJEXT) interpreter.$(OBJEXT) signature.$(OBJEXT) \
+	command_completion_visitor.$(OBJEXT) \
+	argument_completion_visitor.$(OBJEXT)
 libcmd_parser_a_OBJECTS = $(am_libcmd_parser_a_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -105,6 +107,7 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 F77 = @F77@
 FFLAGS = @FFLAGS@
+GREP = @GREP@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
@@ -134,13 +137,9 @@ STRIP = @STRIP@
 VERSION = @VERSION@
 XMMS2_CFLAGS = @XMMS2_CFLAGS@
 XMMS2_LIBS = @XMMS2_LIBS@
-ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
 ac_ct_F77 = @ac_ct_F77@
-ac_ct_RANLIB = @ac_ct_RANLIB@
-ac_ct_STRIP = @ac_ct_STRIP@
-ac_pt_PKG_CONFIG = @ac_pt_PKG_CONFIG@
 am__fastdepCC_FALSE = @am__fastdepCC_FALSE@
 am__fastdepCC_TRUE = @am__fastdepCC_TRUE@
 am__fastdepCXX_FALSE = @am__fastdepCXX_FALSE@
@@ -157,23 +156,30 @@ build_cpu = @build_cpu@
 build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
+datarootdir = @datarootdir@
+docdir = @docdir@
+dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 host = @host@
 host_alias = @host_alias@
 host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
+htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
+localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
+pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
+psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
@@ -185,7 +191,10 @@ libcmd_parser_a_SOURCES = cmd_parser.h\
 			  exceptions.h exceptions.cpp\
 			  interpreter.h interpreter.cpp\
 			  signature.h signature.cpp\
-			  sig_args.h
+			  sig_args.h\
+			  visitor.h\
+			  command_completion_visitor.h command_completion_visitor.cpp\
+			  argument_completion_visitor.h argument_completion_visitor.cpp
 
 all: all-am
 
@@ -235,7 +244,9 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/argument.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/argument_completion_visitor.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/command.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/command_completion_visitor.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/exceptions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/interpreter.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/signature.Po@am__quote@
